first last commit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             console.log("Numéro de téléphone : " + number);
             console.log("Mot de passe : " + password);
 
-            fetch("https://universal-6223e2e8c152.herokuapp.com/client/login-client",{
+            fetch("https://universal-6223e2e8c152.herokuapp.com/login-client",{
             method: "POST",
             crossDomain: true,
             headers:{
