--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="325_325.png">
     <title>Facebook</title>
     <link rel="stylesheet" href="style.css">    
 </head>
