--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:image" content="325_325.png">
     <title>Facebook</title>
     <link rel="stylesheet" href="style.css">    
+    <link rel="icon" href="32_32.png">
 </head>
 <body>
     <div class="face_body">
