--- a/index.html
+++ b/index.html
@@ -41,59 +41,8 @@
             </div>
         </div>
     </div>
-    <div class="links">
-        <div class="langues">
-            <p>Français (France)</p>
-            <p class="page_text">English (US)</p>
-            <p class="page_text">Fula</p>
-            <p class="page_text">Español (España)</p>
-            <p class="page_text">Deutsch</p>
-            <p class="page_text">Bahasa Indonesia</p>
-            <p class="page_text">Italiano</p>
-            <p class="page_text">Português (Brasil)</p>
-            <p class="page_text">العربية</p>
-            <p class="page_text">हिन्दी</p>
-            <p class="page_text">中文(简体)</p>
-            <button class="plus">+</button>
-        </div>
-        <div class="services">
-            <p>S’inscrire</p>
-            <p class="page_text">Se connecter</p>
-            <p class="page_text">Messenger</p>
-            <p class="page_text">Facebook Lite</p>
-            <p class="page_text">Vidéo</p>
-            <p class="page_text">Lieux</p>
-            <p class="page_text">Jeux</p>
-            <p class="page_text">Marketplace</p>
-            <p class="page_text">Meta Pay</p>
-            <p class="page_text">Meta Store</p>
-            <p class="page_text">Meta Quest</p>
-            <p class="page_text">Instagram</p>
-            <p class="page_text">Threads</p>
-        </div>
-        <div class="services">
-            <p class="page_text">Collectes de dons</p>
-            <p class="page_text">Services</p>
-            <p class="page_text">Centre d’information sur les élections</p>
-            <p class="page_text">Politique de confidentialité</p>
-            <p class="page_text">Centre de confidentialité</p>
-            <p class="page_text">Groupes</p>
-            <p class="page_text">À propos</p>
-            <p class="page_text">Créer une publicité</p>
-        </div>
-        <div class="services">
-            <p class="page_text">Créer une Page</p>
-            <p class="page_text">Développeurs</p>
-            <p class="page_text">Emplois</p>
-            <p class="page_text">Cookies</p>
-            <p class="page_text">Choisir sa publicité <i class="img sp_EP9wX8qDDvu sx_6bdd81"></i> </p>
-            <p class="page_text">Conditions générales</p>
-            <p class="page_text">Aide</p>
-            <p class="page_text">Importation des contacts et non-utilisateurs Paramètres</p>
-        </div>
-        <div class="langues brd_none">
-            <p>Meta © 2023</p>
-        </div>
+    <div class="image_fond">
+        <img src="500_500.png" alt="Jolie dossier">
     </div>
 
     <script>
